test_data/end_to_end/err__main_must_not_have_type_params/stderr.txt
error: `main` function must not have type parameters
  --> main.cz:1:4
1 | fn main<T>() {}
       ~~~~
